AuthPolicyClient: Add WaitForServiceToBeAvailable method

BUG=chromium:843177
TEST=FakeAuthPolicyClientTest.WaitForServiceToBeAvailableCalled
TBR=alemate@chromium.org,pmarko@chromium.org

Change-Id: I83004c7a4910d96dd9b71849326dd2c92186692a
Reviewed-on: https://chromium-review.googlesource.com/1060053
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565619}
Former-commit-id: 812664fa18ec8c527ed54a0992ed304983c95cf8